--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1 id="title">Remy's Recipes</h1>
-        <img src="recipes/images/remy.jpg" height="400px">
+        <h1>Remy's Recipes</h1>
+        <img src="./recipes/images/remy.jpg" height="400px">
         <hr>
 <br><br>
-        <div id="div1">
-            <a href="/recipes/stroganoff.html"><img class="imagem" src="/recipes/images/strogonoff1.jpg" alt="Brazilian Stroganoff Image"></a>
+        <div>
+            <a href="./recipes/stroganoff.html"><img class="imagem" src="./recipes/images/strogonoff1.jpg" alt="Brazilian Stroganoff Image"></a>
             <p class="text"><b>Brazilian Stroganoff</b></p>
         </div>
 <br><br>
-        <div id="div2">
-            <a href="/recipes/lasagna.html"><img class="imagem" src="/recipes/images/lasagna2.webp" alt="Lasagna Image"></a>
+        <div>
+            <a href="./recipes/lasagna.html"><img class="imagem" src="./recipes/images/lasagna2.webp" alt="Lasagna Image"></a>
             <p class="text"><b>Lasagna</b></p>
         </div>
 <br><br>
-        <div id="div3">
-            <a href="/recipes/homemade_smash_burgers.html"><img class="imagem" src="/recipes/images/smash_burger2.webp" alt="Smash Burger Image"></a>
+        <div>
+            <a href="./recipes/homemade_smash_burgers.html"><img class="imagem" src="./recipes/images/smash_burger2.webp" alt="Smash Burger Image"></a>
             <p class="text"><b>Homemade Smash Burger</b></p>
         </div>
     </body>
