--- a/index.html
+++ b/index.html
@@ -6,24 +6,22 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Remy's Recipes</h1>
-        <img src="./recipes/images/remy.jpg" height="400px">
+        <header>
+            <h1>Remy's Recipes</h1>
+            <img src="./recipes/images/remy.jpg" id="main_image" height="200px">
+        </header>
         <hr>
 <br><br>
-        <div>
-            <a href="./recipes/stroganoff.html"><img class="imagem" src="./recipes/images/strogonoff1.jpg" alt="Brazilian Stroganoff Image"></a>
-            <p class="text"><b>Brazilian Stroganoff</b></p>
-        </div>
+        <ul id="list">
+            <li><a href="./recipes/stroganoff.html"><img class="imagem" src="./recipes/images/strogonoff1.jpg" alt="Brazilian Stroganoff Image"></a>
+            <p class="text"><b>Brazilian Stroganoff</b></p></li>    
 <br><br>
-        <div>
-            <a href="./recipes/lasagna.html"><img class="imagem" src="./recipes/images/lasagna2.webp" alt="Lasagna Image"></a>
-            <p class="text"><b>Lasagna</b></p>
-        </div>
+            <li><a href="./recipes/lasagna.html"><img class="imagem" src="./recipes/images/lasagna2.webp" alt="Lasagna Image"></a>
+            <p class="text"><b>Lasagna</b></p></li>
 <br><br>
-        <div>
-            <a href="./recipes/homemade_smash_burgers.html"><img class="imagem" src="./recipes/images/smash_burger2.webp" alt="Smash Burger Image"></a>
-            <p class="text"><b>Homemade Smash Burger</b></p>
-        </div>
+            <li><a href="./recipes/homemade_smash_burgers.html"><img class="imagem" src="./recipes/images/smash_burger2.webp" alt="Smash Burger Image"></a>
+            <p class="text"><b>Homemade Smash Burger</b></p></li>
+        </ul>
     </body>
 <hr>
     <footer>
